--- a/midonet-manager/hooks/install
+++ b/midonet-manager/hooks/install
@@ -1,15 +1,26 @@
+#
+# Copyright (c) 2015 Midokura SARL, All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 #!/usr/bin/python
 import re
-
 import os
 import sys
 import setup
 import shutil
 import socket
 import subprocess
-
-
-setup.pre_install()
 
 from charmhelpers.core import hookenv
 from charmhelpers.core import host
@@ -53,10 +64,7 @@ def install_midonet_manager():
     host_ip = socket.gethostbyname(host_name.strip())
     medo_api_ip = config['midonet_api_ip']
     medo_api_oip = config['midonet_api_outer_ip']
-    puppet_module = "midonet_manager"
-    if config['midonet_repo'] == "MEM":
-        if config['midonet_mem_version'] == "1.8":
-            puppet_module = "midonet_manager18"
+    puppet_module = "midonet_manager18"
     # create node.pp for puppet
     node_puppet_create(puppet_module,
                                    medo_api_oip) 
